# rustdoc-types

./: CHANGELOG.md  COMMIT.txt  Cargo.toml  README.md  clgen.sh  update.sh
.github/workflows/: CI.yml
examples/: simple_usage.rs
src/: lib.rs
