[package]
name = "rustdoc-types"
version = "0.19.0"
authors = ["Nixon Enraght-Moony <nixon.emoony@gmail.com>", "The Rust Project Developers"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Types for rustdoc's json output"
repository = "https://github.com/aDotInTheVoid/rustdoc-types/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1", features=["derive"]}

[dev-dependencies]
serde_json = "1.0"
