[package]
name = "rustdoc-types"
version = "0.32.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Types for rustdoc's json output"
repository = "https://github.com/rust-lang/rustdoc-types"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1", features=["derive"]}
rustc-hash = {version="2", optional=true}

[features]
default = []

# Switch the hashmaps used in rustdoc-types to the FxHashMap from rustc-hash.
#
# This might improve performace if your are reading the rustdoc JSON from large
# crates like aws_sdk_ec2
rustc-hash = ["dep:rustc-hash"]

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0"
